--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">最近時給の高いバイトを始めたと言っていた友人から突然のSOS。< BR >
+          <p class="text-center">最近時給の高いバイトを始めたと言っていた友人から突然のSOS。<br>
             何やらおかしな研究所に閉じ込められたらしく、時間内に謎を解かなければ毒ガスを撒かれて死んでしまう！と半泣きの状態だ。< BR >
             正直半信半疑だが、あまりにも真剣な友人が気にかかったので、携帯から謎を解く手伝いをすることにした。< BR >
             さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
