--- a/main.html
+++ b/main.html
@@ -34,8 +34,9 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">まずは、この学校の家庭科室の鍵のありかを知らなければ入ることができない。<br>
-              下の画像の謎を解き、鍵のありかをキーワード欄に入力しよう。</p>
+            <p class="text-center">部屋の壁にモニターが嵌め込んであり、そこに全く訳のわからないことが書いてあると友人が言うので、写真を撮って送ってもらった。<br>
+              ふうん、物騒なことを言っていたわりに、思ったより普通のクイズだな。
+              とりあえず解いてみよう。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -85,9 +86,11 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">家庭科室の扉が開いた！<br>
-                さぁ先生を助けるため<br>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
+              <div class="clear-message__content">友人が答えを打ち込むと、突然隣の壁が開いたらしい。<br>
+                警戒しながら空いた空間に足を踏み入れると、そこには先ほどと同じようなモニターがあった。<br>
+不意に後ろから機械の駆動音のような音が響き、振り返ってみると、どうやら先ほど開いた壁が閉じられてしまったようだ。<br>
+そのすぐ後、壁の向こう側からプシュー…という空気の抜けるような音がした。<br>
+「毒ガスだ！毒ガスが撒かれたんだ！」と騒ぐ友人をどうにか宥め、次の問題文の画像を送ってもらった。</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -107,9 +110,13 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <p class="text-center">友人に答えを打ち込ませると、突然警報音が響き渡った。<br>
+なんだ、間違えたのか！？<br>
+                絶叫し出した友人に今の状況をどうにか説明させようとしたが、全く耳を貸してくれない。
+混乱した状況の中、機械じみた女の声が響き渡った。<br>
+             「最終問題です」   <br>
+友人は喉を震わせながら、問題の写真を送ってきた。<br>
+                ただのクイズ番組に出てくるような問題を解いているだけなのに、俺は冷や汗が止まらなかった。</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -198,9 +205,11 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <p class="text-center">問題の答えを入れると、「おめ……す！あなたがさいし……！」というノイズがかった男の声がした後、なぜかしばらく音が聞こえなくなった。<br>
+              どうやら、電話が切れてしまったらしい。<br>
+              …おい、冗談だよな？<br>
+              何度か自分から電話をかけ直してみても出ない。<br>
+              じわじわと自分の中で焦燥感が湧き上がる中、再度友人からの着信が来た。</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
