--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
             <p class="text-center">部屋の壁にモニターが嵌め込んであり、そこに全く訳のわからないことが書いてあると友人が言うので、写真を撮って送ってもらった。<br>
-              ふうん、物騒なことを言っていたわりに、思ったより普通のクイズだな。
+              ふうん、物騒なことを言っていたわりに、思ったより普通のクイズだな<br>
               とりあえず解いてみよう。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
