--- a/main.html
+++ b/main.html
@@ -34,7 +34,8 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">部屋の壁にモニターが嵌め込んであり、そこに全く訳のわからないことが書いてあると友人が言うので、写真を撮って送ってもらった。<br>
+            <p class="text-center">部屋の壁にモニターが嵌め込んであり、<br>
+              そこに全く訳のわからないことが書いてあると友人が言うので、写真を撮って送ってもらった。<br>
               ふうん、物騒なことを言っていたわりに、思ったより普通のクイズだな<br>
               とりあえず解いてみよう。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
@@ -86,11 +87,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">友人が答えを打ち込むと、突然隣の壁が開いたらしい。<br>
-                警戒しながら空いた空間に足を踏み入れると、そこには先ほどと同じようなモニターがあった。<br>
-不意に後ろから機械の駆動音のような音が響き、振り返ってみると、どうやら先ほど開いた壁が閉じられてしまったようだ。<br>
-そのすぐ後、壁の向こう側からプシュー…という空気の抜けるような音がした。<br>
-「毒ガスだ！毒ガスが撒かれたんだ！」と騒ぐ友人をどうにか宥め、次の問題文の画像を送ってもらった。</div>
+              <div class="clear-message__content">友人が答えを打ち込むと、突然隣の壁が開いたらしい。</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -110,13 +107,11 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">友人に答えを打ち込ませると、突然警報音が響き渡った。<br>
-なんだ、間違えたのか！？<br>
-                絶叫し出した友人に今の状況をどうにか説明させようとしたが、全く耳を貸してくれない。
-混乱した状況の中、機械じみた女の声が響き渡った。<br>
-             「最終問題です」   <br>
-友人は喉を震わせながら、問題の写真を送ってきた。<br>
-                ただのクイズ番組に出てくるような問題を解いているだけなのに、俺は冷や汗が止まらなかった。</p>
+              <p class="text-center">警戒しながら空いた空間に足を踏み入れると、そこには先ほどと同じようなモニターがあった。　<br>
+不意に後ろから機械の駆動音のような音が響き、振り返ってみると、<br>
+                どうやら先ほど開いた壁が閉じられてしまったようだ。<br>
+そのすぐ後、壁の向こう側からプシュー…という空気の抜けるような音がした。<br>
+「毒ガスだ！毒ガスが撒かれたんだ！」と騒ぐ友人をどうにか宥め、次の問題文の画像を送ってもらった。</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -188,8 +183,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
-                次のステージの謎を解こう！</div>
+              <div class="clear-message__content">友人に答えを打ち込ませると、突然警報音が響き渡った。<br>
+                なんだ、間違えたのか！？</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -205,11 +200,11 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">問題の答えを入れると、「おめ……す！あなたがさいし……！」というノイズがかった男の声がした後、なぜかしばらく音が聞こえなくなった。<br>
-              どうやら、電話が切れてしまったらしい。<br>
-              …おい、冗談だよな？<br>
-              何度か自分から電話をかけ直してみても出ない。<br>
-              じわじわと自分の中で焦燥感が湧き上がる中、再度友人からの着信が来た。</p>
+            <p class="text-center">絶叫し出した友人に今の状況をどうにか説明させようとしたが、全く耳を貸してくれない。<br>
+混乱した状況の中、機械じみた女の声が響き渡った。<br>
+「最終問題です」<br>
+友人は喉を震わせながら、問題の写真を送ってきた。<br>
+ただのクイズ番組に出てくるような問題を解いているだけなのに、俺は冷や汗が止まらなかった。</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
