--- a/final.html
+++ b/final.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>封鎖された家庭科室からの脱出 │ Project N</title>
+  <title>研究所からの救難信号 │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -23,8 +23,11 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">問題の答えを入れると、「おめ……す！あなたがさいし……！」というノイズがかった男の声がした後、なぜかしばらく音が聞こえなくなった。<br>
+どうやら、電話が切れてしまったらしい。<br>
+…おい、冗談だよな？<br>
+何度か自分から電話をかけ直してみても出ない。<br>
+じわじわと自分の中で焦燥感が湧き上がる中、再度友人からの着信が来た。・・・</p>
         </div>
       </div>
     </section>
@@ -44,9 +47,18 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
+        <p class="text-center">それから、あいつの話したことのあらましを簡単にまとめると、
+          これは「人間は極限状態に陥った時どのようにして危機を脱するか」と言う実験だったらしい。
+もちろん毒ガスなんて本当は流されていなかったとのこと。<br>
+友人からそのことをあっけらかんと伝えられた時は怒りが抑えられなかったが、冷静に考えてみると当然のことだ。
+そんなに簡単に人の命が奪われるようなこと、現代日本では到底あり得ない。<br>
+まあ、面倒ごとに付き合わされたことに文句はあるが、報酬として牛丼を奢ってもらえることになったのでよしとしよう。<br>
+「そういや、あの件でちょっと気になったことがあってさあ」<br>
+先に牛丼を食い終わった友人が、不意にそんなことを言った<br>
+「俺さー、あの研究所入る時もっといっぱい人がいたような気がしたんだけど、出た時は職員さん以外誰もいなかったんだよなあ。もしかしてビリだったのかなあ」<br>
+その言葉に、少しの引っ掛かりを覚えたが、<br>
+「お前、騒ぎまくってたからな。その間に他のやつは解き終わったんだろ」<br>
+と言って、その引っ掛かりを無かったことにした。</p>
         <p class="text-center">それでは、また会おう！</p>
       </div>
     </section>
