--- a/final.html
+++ b/final.html
@@ -47,7 +47,7 @@ Youtube貼り付けここまで-->
          
       </div>
        
-        <p class="text-center">それから、あいつの話したことのあらましを簡単にまとめると、
+        <p class="text-center">それから、あいつの話したことのあらましを簡単にまとめると、<br>
           これは「人間は極限状態に陥った時どのようにして危機を脱するか」と言う実験だったらしい。
 もちろん毒ガスなんて本当は流されていなかったとのこと。<br>
 友人からそのことをあっけらかんと伝えられた時は怒りが抑えられなかったが、冷静に考えてみると当然のことだ。
