--- a/final.html
+++ b/final.html
@@ -48,14 +48,15 @@ Youtube貼り付けここまで-->
       </div>
        
         <p class="text-center">それから、あいつの話したことのあらましを簡単にまとめると、<br>
-          これは「人間は極限状態に陥った時どのようにして危機を脱するか」と言う実験だったらしい。
+          これは「人間は極限状態に陥った時どのようにして危機を脱するか」と言う実験だったらしい。<br>
 もちろん毒ガスなんて本当は流されていなかったとのこと。<br>
-友人からそのことをあっけらかんと伝えられた時は怒りが抑えられなかったが、冷静に考えてみると当然のことだ。
+友人からそのことをあっけらかんと伝えられた時は怒りが抑えられなかったが、冷静に考えてみると当然のことだ。<br>
 そんなに簡単に人の命が奪われるようなこと、現代日本では到底あり得ない。<br>
 まあ、面倒ごとに付き合わされたことに文句はあるが、報酬として牛丼を奢ってもらえることになったのでよしとしよう。<br>
 「そういや、あの件でちょっと気になったことがあってさあ」<br>
 先に牛丼を食い終わった友人が、不意にそんなことを言った<br>
-「俺さー、あの研究所入る時もっといっぱい人がいたような気がしたんだけど、出た時は職員さん以外誰もいなかったんだよなあ。もしかしてビリだったのかなあ」<br>
+「俺さー、あの研究所入る時もっといっぱい人がいたような気がしたんだけど、
+ <br>出た時は職員さん以外誰もいなかったんだよなあ。もしかしてビリだったのかなあ」<br>
 その言葉に、少しの引っ掛かりを覚えたが、<br>
 「お前、騒ぎまくってたからな。その間に他のやつは解き終わったんだろ」<br>
 と言って、その引っ掛かりを無かったことにした。</p>
