--- a/final.html
+++ b/final.html
@@ -79,7 +79,7 @@ Youtube貼り付けここまで-->
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
                 　　サイト製作担当　PAIRU<br>
-                ストーリー製作担当<br>
+                ストーリー製作担当　中瀬<br>
                 　デザイン製作担当　中瀬<br>
               </p>
             </div>
