--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
     <h1 class="main-title"><img src="assets/images/SAO.jpg" alt="研究所からの救難信号"></h1>
+    <img src="assets/images/SAO.jpg" alt="研究所からの救難信号">
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
