--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
     <h1 class="main-title"><img src="assets/images/SAO.jpg" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ 封鎖された家庭科室からの脱出"></h1>
-    <!-- タイトルエリア　ここまで -->
+    <h1 class="main-title"><img src="assets/images/SAO.jpg" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ 封鎖された家庭科室からの脱出"></h1>    <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
