--- a/main.html
+++ b/main.html
@@ -24,7 +24,8 @@
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
     <h1 class="main-title"><img src="assets/images/SAO.jpg" alt="研究所からの救難信号"></h1>
-    <h1 class="main-title"><img src="assets/images/SAO.jpg" alt="研究所からの救難信号"></h1>    <!-- タイトルエリア　ここまで -->
+    <img src="assets/images/SAO.jpg" alt="研究所からの救難信号">
+    <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
       <!-- STAGE1　ここから -->
@@ -43,7 +44,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/stage.png" alt="">
+                <img src="assets/images/SAO5.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
@@ -133,7 +134,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/SAO7.png" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
@@ -207,7 +208,7 @@ Youtube貼り付けここまで -->
 友人は喉を震わせながら、問題の写真を送ってきた。<br>
 ただのクイズ番組に出てくるような問題を解いているだけなのに、俺は冷や汗が止まらなかった。</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/SAO6.png" alt="">
             </figure>
           </div>
         </section>
