--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
     <h1 class="main-title"><img src="assets/images/SAO.jpg" alt="研究所からの救難信号"></h1>
-    <img src="assets/images/SAO.jpg" alt="研究所からの救難信号">
+    <img src="assets/images/SAO5.jpg" alt="研究所からの救難信号">
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
@@ -44,7 +44,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/SAO5.png" alt="">
+                <img src="assets/images/プロN謎２.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
