--- a/main.html
+++ b/main.html
@@ -208,7 +208,7 @@ Youtube貼り付けここまで -->
 友人は喉を震わせながら、問題の写真を送ってきた。<br>
 ただのクイズ番組に出てくるような問題を解いているだけなのに、俺は冷や汗が止まらなかった。</p>
             <figure class="image__container">
-              <img src="assets/images/SAO6.png" alt="">
+              <img src="assets/images/プロN謎３.png" alt="">
             </figure>
           </div>
         </section>
